@@ -11,6 +11,7 @@ v4.2.13 (work-in-progress)
      * Add small unscientific but completely reproducible RNG for Python unit
        tests.
      * Add comprehensive (>99% coverage) unit test for python histograms.
+     * NCRandUtils.hh: Add randPointInUnitCircle utility.
      * ...
 
 v4.2.12 2026-01-05
